[package]
name = "kdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
log = { version = "0.4", features = ["std", "serde"] }
simple_logger = "1.16.0"
itertools = "0.10.3"